--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,35 @@
 [package]
 name = "rustdocs_mcp_server"
 version = "1.3.1"
-edition = "2024"
+edition = "2021"
+
+[lib]
+name = "rustdocs_mcp_server"
+path = "src/lib.rs"
+
+# Add a second binary target for the proxy
+[[bin]]
+name = "rustdocs_mcp_server"
+path = "src/main.rs"
+
+[[bin]]
+name = "populate_db"
+path = "src/bin/populate_db.rs"
+
+[[bin]]
+name = "populate_all"
+path = "src/bin/populate_all.rs"
+
+[[bin]]
+name = "backfill_versions"
+path = "src/bin/backfill_versions.rs"
+
+
 
 [dependencies]
 rmcp = { version = "0.1.5", features = ["tower", "transport-io", "transport-sse-server", "macros", "server"] } # Add macros, server, schemars
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
+reqwest = { version = "0.12.12", features = ["json"] }
 dotenvy = "0.15"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -19,11 +43,15 @@ futures = "0.3"
 bincode = { version = "2.0.1", features = ["serde"] } # Enable serde integration
 tiktoken-rs = "0.6.0"
 # Configure cargo crate to vendor openssl to avoid system mismatches
-cargo = { version = "0.87.1", default-features = false, features = ["vendored-openssl"] }
+# cargo = { version = "0.87.1", default-features = false, features = ["vendored-openssl"] }
 tempfile = "3.19.1"
 anyhow = "1.0.97"
 schemars = "0.8.22"
 clap = { version = "4.5.34", features = ["cargo", "derive", "env"] }
+regex = "1.11.1"
+sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
+pgvector = { version = "0.4", features = ["sqlx"] }
+chrono = "0.4"
 
 
 # --- Platform Specific Dependencies ---
