--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,18 @@ path = "src/bin/populate_all.rs"
 name = "backfill_versions"
 path = "src/bin/backfill_versions.rs"
 
+[[bin]]
+name = "debug_axum_search"
+path = "src/bin/debug_axum_search.rs"
+
+[[bin]]
+name = "debug_axum_sql"
+path = "src/bin/debug_axum_sql.rs"
+
+[[bin]]
+name = "analyze_vector_search"
+path = "src/bin/analyze_vector_search.rs"
+
 
 
 [dependencies]
@@ -39,6 +51,7 @@ scraper = "0.23.1"
 ndarray = { version = "0.16.1", features = ["serde"] } # Enable serde feature
 async-openai = "0.28.0"
 # async-trait = "0.1.88" # Removed, likely no longer needed
+async-trait = "0.1.88"
 futures = "0.3"
 bincode = { version = "2.0.1", features = ["serde"] } # Enable serde integration
 tiktoken-rs = "0.6.0"
